[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydemo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.127.1",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]


[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
    "alembic",
    ".git",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = []

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
addopts = "-v -s --strict-markers"

[tool.hatch.build.targets.wheel]
packages = ["app"]
